@@ -38,6 +38,7 @@ init:
 	jp	_exit
 
 	;; Ordering of segments for the linker.
+	.area	_HOME
 	.area	_CODE
         .area   _GSINIT
         .area   _GSFINAL
